# cliqs

./: CMakeLists.txt  LICENSE  README.md  cliqs.cpp  cliqs.hpp
sample/: CMakeLists.txt  main.cpp
